[tool.poetry]
name = "plexjanitor"
version = "0.1.0"
description = "clear up plex"
authors = ["Sander van Dragt <sander@vandragt.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PlexAPI = "^4.11.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
